# shiftdetector

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: black.yaml  build-check.yaml  mypy.yaml  release-publish.yaml  ruff.yaml  test-publish.yaml
ci/: make_stubs.py  pyupgrade.sh
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/: PROJECT.rst  modules.rst  shiftdetector.characterization.rst  shiftdetector.cli.rst  shiftdetector.implementations.rst  shiftdetector.rst
scripts/: run.py
scripts/ci/: mypy.sh
src/shiftdetector/: __init__.py  __main__.py  _loader.py  _scheduler.py  _shift.py  _types.py  common.py
src/shiftdetector/characterization/: __init__.py  _graph.py  _helpers.py  _load.py  _method.py  _types.py
src/shiftdetector/cli/: __init__.py  _run.py
src/shiftdetector/cli/run/: __init__.py  __main__.py  _run.py
src/shiftdetector/implementations/: __init__.py
src/shiftdetector/implementations/_jetson/: __init__.py  _memory.py  _power_measure.py
src/shiftdetector/implementations/_mock/: __init__.py  _memory.py  _power_measure.py
src/shiftdetector/implementations/_oakd/: __init__.py  _model.py
src/shiftdetector/implementations/_tensorrt/: __init__.py  _yolo.py
typings/networkx/: __init__.pyi  convert.pyi  convert_matrix.pyi  exception.pyi  lazy_imports.pyi  relabel.pyi
typings/networkx/algorithms/: __init__.pyi  asteroidal.pyi  boundary.pyi  bridges.pyi  chains.pyi  chordal.pyi  clique.pyi  cluster.pyi  communicability_alg.pyi  core.pyi  covering.pyi  cuts.pyi  cycles.pyi  d_separation.pyi  dag.pyi  distance_measures.pyi  distance_regular.pyi  dominance.pyi  dominating.pyi  efficiency_measures.pyi  euler.pyi  graph_hashing.pyi  graphical.pyi  hierarchy.pyi  hybrid.pyi  isolate.pyi  link_prediction.pyi  lowest_common_ancestors.pyi  matching.pyi  mis.pyi  moral.pyi  node_classification.pyi  non_randomness.pyi  planar_drawing.pyi  planarity.pyi  polynomials.pyi  reciprocity.pyi  regular.pyi  richclub.pyi  similarity.pyi  (+13 more)
typings/networkx/algorithms/approximation/: __init__.pyi  clique.pyi  clustering_coefficient.pyi  connectivity.pyi  distance_measures.pyi  dominating_set.pyi  kcomponents.pyi  matching.pyi  maxcut.pyi  ramsey.pyi  steinertree.pyi  traveling_salesman.pyi  treewidth.pyi  vertex_cover.pyi
typings/networkx/algorithms/assortativity/: connectivity.pyi  correlation.pyi  mixing.pyi  neighbor_degree.pyi  pairs.pyi
typings/networkx/algorithms/bipartite/: __init__.pyi  basic.pyi  centrality.pyi  cluster.pyi  covering.pyi  edgelist.pyi  generators.pyi  matching.pyi  matrix.pyi  projection.pyi  redundancy.pyi  spectral.pyi
typings/networkx/algorithms/centrality/: __init__.pyi  betweenness.pyi  betweenness_subset.pyi  closeness.pyi  current_flow_betweenness.pyi  current_flow_betweenness_subset.pyi  current_flow_closeness.pyi  degree_alg.pyi  dispersion.pyi  eigenvector.pyi  flow_matrix.pyi  group.pyi  harmonic.pyi  katz.pyi  laplacian.pyi  load.pyi  percolation.pyi  reaching.pyi  second_order.pyi  subgraph_alg.pyi  trophic.pyi  voterank_alg.pyi
typings/networkx/algorithms/coloring/: __init__.pyi  equitable_coloring.pyi  greedy_coloring.pyi
typings/networkx/algorithms/community/: __init__.pyi  asyn_fluid.pyi  centrality.pyi  community_utils.pyi  kclique.pyi  kernighan_lin.pyi  label_propagation.pyi  louvain.pyi  lukes.pyi  modularity_max.pyi  quality.pyi
typings/networkx/algorithms/components/: __init__.pyi  attracting.pyi  biconnected.pyi  connected.pyi  semiconnected.pyi  strongly_connected.pyi  weakly_connected.pyi
typings/networkx/algorithms/connectivity/: __init__.pyi  connectivity.pyi  cuts.pyi  disjoint_paths.pyi  edge_augmentation.pyi  edge_kcomponents.pyi  kcomponents.pyi  kcutsets.pyi  stoerwagner.pyi  utils.pyi
typings/networkx/algorithms/flow/: __init__.pyi  boykovkolmogorov.pyi  capacityscaling.pyi  dinitz_alg.pyi  edmondskarp.pyi  gomory_hu.pyi  maxflow.pyi  mincost.pyi  networksimplex.pyi  preflowpush.pyi  shortestaugmentingpath.pyi  utils.pyi
typings/networkx/algorithms/isomorphism/: __init__.pyi  ismags.pyi  isomorph.pyi  isomorphvf2.pyi  matchhelpers.pyi  temporalisomorphvf2.pyi  tree_isomorphism.pyi  vf2pp.pyi  vf2userfunc.pyi
typings/networkx/algorithms/link_analysis/: hits_alg.pyi  pagerank_alg.pyi
typings/networkx/algorithms/minors/: __init__.pyi  contraction.pyi
typings/networkx/algorithms/operators/: all.pyi  binary.pyi  product.pyi  unary.pyi
typings/networkx/algorithms/shortest_paths/: __init__.pyi  astar.pyi  dense.pyi  generic.pyi  unweighted.pyi  weighted.pyi
typings/networkx/algorithms/traversal/: __init__.pyi  beamsearch.pyi  breadth_first_search.pyi  depth_first_search.pyi  edgebfs.pyi  edgedfs.pyi
typings/networkx/algorithms/tree/: __init__.pyi  branchings.pyi  coding.pyi  (+4 more)
typings/networkx/classes/: __init__.pyi  backends.pyi  coreviews.pyi  digraph.pyi  filters.pyi  function.pyi  graph.pyi  graphviews.pyi  multidigraph.pyi  multigraph.pyi  reportviews.pyi
typings/networkx/drawing/: __init__.pyi  layout.pyi  nx_agraph.pyi  nx_latex.pyi  nx_pydot.pyi  nx_pylab.pyi
typings/networkx/generators/: __init__.pyi  atlas.pyi  classic.pyi  cographs.pyi  community.pyi  degree_seq.pyi  directed.pyi  duplication.pyi  ego.pyi  expanders.pyi  geometric.pyi  harary_graph.pyi  internet_as_graphs.pyi  intersection.pyi  interval_graph.pyi  joint_degree_seq.pyi  lattice.pyi  line.pyi  mycielski.pyi  nonisomorphic_trees.pyi  random_clustered.pyi  random_graphs.pyi  small.pyi  social.pyi  spectral_graph_forge.pyi  stochastic.pyi  sudoku.pyi  trees.pyi  triads.pyi
typings/networkx/linalg/: __init__.pyi  algebraicconnectivity.pyi  attrmatrix.pyi  bethehessianmatrix.pyi  graphmatrix.pyi  laplacianmatrix.pyi  modularitymatrix.pyi  spectrum.pyi
typings/networkx/readwrite/: __init__.pyi  adjlist.pyi  edgelist.pyi  gexf.pyi  gml.pyi  graph6.pyi  graphml.pyi  leda.pyi  multiline_adjlist.pyi  p2g.pyi  pajek.pyi  sparse6.pyi  text.pyi
typings/networkx/utils/: __init__.pyi  decorators.pyi  heaps.pyi  misc.pyi  random_sequence.pyi  rcm.pyi  union_find.pyi
(+5 files in other folders)
